2005-12-01  Florian Boor  <florian.boor@kernelconcepts.de>

    * namedetail.c: Apply patch by Olivier Berger to fix name prefix/suffix 
                    translation.

2005-10-19  Florian Boor  <florian.boor@kernelconcepts.de>

    * hildon/*.in: Rename service and service file.

2005-10-14  Florian Boor  <florian.boor@kernelconcepts.de>

    * debian/*: Change some locations to fit maemo installer needs.
    * main-hildon.c: Set some hardcoded locations, necessary for maemo.

2005-08-15  Florian Boor  <florian.boor@kernelconcepts.de>

    * main-hildon.c, debian/rules: Change path to icons and package prefix to 
                                   make application work in 770 production images.

2005-08-04  Rene Wagner  <rw@handhelds.org>

    * Release 0.41
    * export.c: Include config.h. Add #ifdef USE_DBUS guards around D-Bus code.
    * configure.ac: Add --disable-dbus configure option. Generate config.h.
    * autogen.sh: Run autoheader.

2005-08-02  Florian Boor  <florian.boor@kernelconcepts.de>

    * import-vcard.c: Update import stuff to new database layout.

2005-07-29  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Change packing of deatil table in bigscreen + portrait mode.

2005-07-25  Florian Boor  <florian.boor@kernelconcepts.de>

    * main-hildon.c: Use hidon method to connect toolbar.

2005-07-24  Florian Boor  <florian.boor@kernelconcepts.de>

    * hildon/org.gpe.gpe-contacts.service.in: Correct path to installed 
                                              executable.
    * debian/control: Tune dependencies for Maemo integration a little bit.
    * debian/links: Fix link to support package installer.
    * debian/changelog: Add new release.
    * hildon/gpe-contacts.desktop.in.in: Change path to executable.

2005-06-27  Florian Boor  <florian.boor@kernelconcepts.de>

    * Release Version 0.40
    * editing.c: Improve code for widget placement, fixing bugs on large screens.