@@ -73,11 +73,19 @@ menu_do_send_bluetooth (void)
 					  BLUETOOTH_SERVICE_NAME ".OBEX",
 					  "ObjectPush");
 
+#ifdef HAVE_DBUS_MESSAGE_ITER_GET_BASIC
+  dbus_message_iter_init_append (message, &iter);
+
+  dbus_message_iter_append_basic (&iter, DBUS_TYPE_STRING, "GPE.vcf");
+  dbus_message_iter_append_basic (&iter, DBUS_TYPE_STRING, "application/x-vcard");
+  dbus_message_iter_append_fixed_array (&iter, DBUS_TYPE_BYTE, card, strlen (card));
+#else
   dbus_message_append_iter_init (message, &iter);
 
   dbus_message_iter_append_string (&iter, "GPE.vcf");
   dbus_message_iter_append_string (&iter, "application/x-vcard");
   dbus_message_iter_append_byte_array (&iter, card, strlen (card));
+#endif
 
   dbus_connection_send (connection, message, NULL);
 
@@ -100,11 +108,19 @@ menu_do_send_irda (void)
 					  IRDA_SERVICE_NAME ".OBEX",
 					  "ObjectPush");
 
+#ifdef HAVE_DBUS_MESSAGE_ITER_GET_BASIC
+  dbus_message_iter_init_append (message, &iter);
+
+  dbus_message_iter_append_basic (&iter, DBUS_TYPE_STRING, "GPE.vcf");
+  dbus_message_iter_append_basic (&iter, DBUS_TYPE_STRING, "application/x-vcard");
+  dbus_message_iter_append_fixed_array (&iter, DBUS_TYPE_BYTE, card, strlen (card));
+#else
   dbus_message_append_iter_init (message, &iter);
 
   dbus_message_iter_append_string (&iter, "GPE.vcf");
   dbus_message_iter_append_string (&iter, "application/x-vcard");
   dbus_message_iter_append_byte_array (&iter, card, strlen (card));
+#endif
 
   dbus_connection_send (connection, message, NULL);
 
@@ -189,7 +205,11 @@ export_bluetooth_available (void)
   if (connection == NULL)
     return FALSE;
 
+#ifdef HAVE_DBUS_MESSAGE_ITER_GET_BASIC
+  r = dbus_bus_name_has_owner (connection, BLUETOOTH_SERVICE_NAME, NULL);
+#else
   r = dbus_bus_service_exists (connection, BLUETOOTH_SERVICE_NAME, NULL);
+#endif
 
   return r ? TRUE : FALSE;
 #else
@@ -206,7 +226,11 @@ export_irda_available (void)
   if (connection == NULL)
     return FALSE;
 
+#ifdef HAVE_DBUS_MESSAGE_ITER_GET_BASIC
+  r = dbus_bus_name_has_owner (connection, IRDA_SERVICE_NAME, NULL);
+#else
   r = dbus_bus_service_exists (connection, IRDA_SERVICE_NAME, NULL);
+#endif
 
   return r ? TRUE : FALSE;
 #else
